# passive

./: Cargo.toml  index.html  web.sh
assets/: shader.wgsl
src/: app.rs  collision.rs  constants.rs  game.rs  game_object.rs  lib.rs  main.rs  sprite.rs  texture.rs  utils.rs
